# srictf

./: Cargo.toml  Dockerfile
src/: main.rs
templates/: index.html
