[package]
name = "srictf"
version = "0.1.0"
authors = ["osada <osada@osada.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
askama = "0.10.5"
r2d2 = "0.8.9"
r2d2_sqlite = "0.17.0"
thiserror = "1.0.22"
rusqlite = { version = "0.24.2", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
warp = "0.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }